@@ -350,7 +350,7 @@
 <h1 id='the-language-of-copper'>The Language of Copper</h1>
 <p>Copper revolves around the concept of the object-function (or &quot;function-object&quot; if you prefer). Variables in Copper only store object-functions or pointers to them, nothing else. Operators are used only for manipulating function objects. Data manipulation is only done by functions (especially foreign functions).</p>
 
-<p>Copper has a strict set of rules regarding its interpretation. (See <a href="#fundamental-syntax-rules">Fundamental Rules</a>.) As a small set of rules, it reeduces the mental focus needed to read the code.</p>
+<p>Copper has a strict set of rules regarding its interpretation. (See <a href="#fundamental-syntax-rules">Fundamental Rules</a>.) As a small set of rules, it reduces the mental focus needed to read the code.</p>
 
 <p>Comments are created by sandwiching the comment with two pound signs, &quot;#&quot;, one on each side.</p>
 
