@@ -6,6 +6,18 @@
 namespace Cu {
 namespace System {
 
+/*
+	Creates the following functions and adds them to the Copper engine:
+
+sys_lang_version()
+	Returns the Copper language version of the Copper engine.
+
+sys_vm_version()
+	Returns the version of the Copper engine.
+
+sys_vm_branch()
+	Returns the repository branch version of the Copper engine.
+*/
 void
 addFunctionsToEngine( Engine& );
 
